fix handler logic
