# api/oas_response_decoders_gen.go
@@ -384,6 +384,41 @@ func decodeDevicesPostResponse(resp *http.Response) (res DevicesPostRes, _ error
 		default:
 			return res, validate.InvalidContentType(ct)
 		}
+	case 409:
+		// Code 409.
+		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
+		if err != nil {
+			return res, errors.Wrap(err, "parse media type")
+		}
+		switch {
+		case ct == "application/json":
+			buf, err := io.ReadAll(resp.Body)
+			if err != nil {
+				return res, err
+			}
+			d := jx.DecodeBytes(buf)
+
+			var response DevicesPostConflict
+			if err := func() error {
+				if err := response.Decode(d); err != nil {
+					return err
+				}
+				if err := d.Skip(); err != io.EOF {
+					return errors.New("unexpected trailing data")
+				}
+				return nil
+			}(); err != nil {
+				err = &ogenerrors.DecodeBodyError{
+					ContentType: ct,
+					Body:        buf,
+					Err:         err,
+				}
+				return res, err
+			}
+			return &response, nil
+		default:
+			return res, validate.InvalidContentType(ct)
+		}
 	case 500:
 		// Code 500.
 		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
@@ -398,7 +433,7 @@ func decodeDevicesPostResponse(resp *http.Response) (res DevicesPostRes, _ error
 			}
 			d := jx.DecodeBytes(buf)
 
-			var response ErrorResponse
+			var response DevicesPostInternalServerError
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
