# api/oas_response_encoders_gen.go
@@ -164,7 +164,20 @@ func encodeDevicesPostResponse(response DevicesPostRes, w http.ResponseWriter, s
 
 		return nil
 
-	case *ErrorResponse:
+	case *DevicesPostConflict:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(409)
+		span.SetStatus(codes.Error, http.StatusText(409))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *DevicesPostInternalServerError:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(500)
 		span.SetStatus(codes.Error, http.StatusText(500))
